syntax = "proto3";

option java_package = "demo.msa.grpc.hello.api";
option java_outer_classname = "HelloProto";
option java_multiple_files = true;

package demo.msa.grpc.hello.api;

service HelloService {
  rpc Say (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}